# truco-cli

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: crupier.hpp  envido.hpp  equipo_id.hpp  jugador.hpp  naipe.hpp  palo.hpp  truco.hpp
test/: CMakeLists.txt  test_envido.cpp  test_naipe.cpp  test_truco.cpp
